--- a/cert-manager/letsencrypt-staging-cluster-issuer.yaml
+++ b/cert-manager/letsencrypt-staging-cluster-issuer.yaml
@@ -1,14 +1,14 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt-staging-cluster-issuer
+  name: letsencrypt-cluster-issuer
   namespace: cert-manager
 spec:
   acme:
-    server: https://acme-staging-v02.api.letsencrypt.org/directory
+    server: https://acme-v02.api.letsencrypt.org/directory
     email: nimmo@redhat.com
     privateKeySecretRef:
-      name: letsencrypt-staging-cluster-issuer
+      name: letsencrypt-cluster-issuer
     solvers:
     - dns01:
         cloudflare:
