--- a/openshift-config/cluster-proxy-patch.yaml
+++ b/openshift-config/cluster-proxy-patch.yaml
@@ -2,9 +2,7 @@ apiVersion: config.openshift.io/v1
 kind: Proxy
 metadata:
   name: cluster
-spec:
-  trustedCA:
-    name: custom-ca
+spec: {}
 
 ---
 
